# data-journey-python-bootcamp

./: .gitignore  README.md  challenge.py  function_exercises.py  main.py
module01/: challenge.py  main.py  readme.md
module02/: challenge.py  data_type_exercises.py  readme.md  type_error.py  type_error_exercises.py
module03/: challenge.py  for_exercises.py  if_exercises.py  readme.md  while_exercises.py
module04/: challenge.py  dict_exercises.py  function_exercises.py  list_exercises.py  main.py  readme.md
module07/: challenge.py  function_examples.py  main.py  readme.md  sales.csv
module08/: etl.py  pipeline.py  pyproject.toml  readme.md
module08/data/: data_collected_01.json
module08/data/data_insights/: data_insights.parquet
module09/: etl.py  log_example.py  pipeline.py  pyproject.toml  readme.md  singleton_decorator.py  tenacity_decorator.py  timer_decorator.py  utils_log.py
module09/data/: data_collected_02.json  data_collected_03.json
module09/data/data_insights/: data_insights.csv
module11-15/: readme.md
module11-15/2.encapsulation/: postgre.py  sqlite.py
module11-15/3.heritage/: etl.py
module11-15/lesson01/1.basic/: class.py  functional.py
module11-15/lesson02/: csv-test.py
module17/: challenge.py  challenge_db.db  challenge_query.py  pyproject.toml  readme.md  sqlite_connection.py
module18/: data_contract_example.py  extract_load_json.py  pyproject.toml  readme.md  request_example.py
module18/src/: controller.py  database.py  main.py  models.py  pokemon.db
module19/: Dockerfile  pyproject.toml  readme.md
(+19 files in other folders)
