[tool.poetry]
name = "module08"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.21.1"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
