[tool.poetry]
name = "module09"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.3"
pandas = "^2.2.3"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
