[tool.poetry]
name = "module17"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
