[tool.poetry]
name = "module18"
version = "0.1.0"
description = ""
authors = ["DellaCortef <felipe.dellacorte@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
